SDL_ttf now working

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,7 @@
                 "-lSDL2main",
                 "-lSDL2",
                 "-lSDL2_mixer",
+                "-lSDL2_ttf",
                 "-mwindows"
             ],
             "group": "build",
