--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 # Nombre del proyecto
-project(PONG)
+project(ArkaPong)
 
 # Especificar el estándar de C++ requerido
 set(CMAKE_CXX_STANDARD 17)
