--- a/ArkaPong.vcxproj
+++ b/ArkaPong.vcxproj
@@ -100,7 +100,7 @@
     <ClInclude Include="src\managers\TextManager.h" />
     <ClInclude Include="src\managers\TextureManager.h" />
     <ClInclude Include="src\scenes\GameOverScene.h" />
-    <ClInclude Include="src\scenes\GameScene.h" />
+    <ClInclude Include="src\scenes\Scene.h" />
     <ClInclude Include="src\scenes\MenuScene.h" />
     <ClInclude Include="src\scenes\PauseScene.h" />
     <ClInclude Include="src\scenes\PlayScene.h" />
