--- a/ArkaPong.vcxproj
+++ b/ArkaPong.vcxproj
@@ -87,43 +87,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\entities\Ball.h" />
-    <ClInclude Include="src\entities\Entity.h" />
-    <ClInclude Include="src\entities\Paddle.h" />
-    <ClInclude Include="src\entities\Texture.h" />
     <ClInclude Include="src\Game.h" />
-    <ClInclude Include="src\managers\AudioManager.h" />
-    <ClInclude Include="src\managers\CollisionManager.h" />
-    <ClInclude Include="src\managers\SceneManager.h" />
-    <ClInclude Include="src\managers\InputManager.h" />
-    <ClInclude Include="src\managers\ScoreManager.h" />
-    <ClInclude Include="src\managers\TextManager.h" />
-    <ClInclude Include="src\managers\TextureManager.h" />
-    <ClInclude Include="src\scenes\GameOverScene.h" />
-    <ClInclude Include="src\scenes\Scene.h" />
-    <ClInclude Include="src\scenes\MenuScene.h" />
-    <ClInclude Include="src\scenes\PauseScene.h" />
-    <ClInclude Include="src\scenes\PlayScene.h" />
-    <ClInclude Include="src\utilities\AudioParams.h" />
-    <ClInclude Include="src\utilities\GameConstants.h" />
-    <ClInclude Include="src\utilities\TextParams.h" />
+    <ClInclude Include="src\GameConstants.h" />
+    <ClInclude Include="src\Scenes\GameScene.h" />
+    <ClInclude Include="src\Scenes\Scene.h" />
+    <ClInclude Include="src\Scenes\SceneManager.h" />
+    <ClInclude Include="src\ECS\Coordinator.h" />
+    <ClInclude Include="src\ECS\Component\AudioComponent.h" />
+    <ClInclude Include="src\ECS\Component\ComponentManager.h" />
+    <ClInclude Include="src\ECS\Component\PositionComponent.h" />
+    <ClInclude Include="src\ECS\Component\RenderComponent.h" />
+    <ClInclude Include="src\ECS\Component\TextComponent.h" />
+    <ClInclude Include="src\ECS\Component\VelocityComponent.h" />
+    <ClInclude Include="src\ECS\Entity\Entity.h" />
+    <ClInclude Include="src\ECS\Entity\EntityManager.h" />
+    <ClInclude Include="src\ECS\System\AudioSystem.h" />
+    <ClInclude Include="src\ECS\System\MovementSystem.h" />
+    <ClInclude Include="src\ECS\System\RenderSystem.h" />
+    <ClInclude Include="src\ECS\System\System.h" />
+    <ClInclude Include="src\ECS\System\SystemManager.h" />
+    <ClInclude Include="src\ECS\System\TextSystem.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\entities\Ball.cpp" />
-    <ClCompile Include="src\entities\Paddle.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\managers\AudioManager.cpp" />
-    <ClCompile Include="src\managers\CollisionManager.cpp" />
-    <ClCompile Include="src\managers\SceneManager.cpp" />
-    <ClCompile Include="src\managers\InputManager.cpp" />
-    <ClCompile Include="src\managers\ScoreManager.cpp" />
-    <ClCompile Include="src\managers\TextManager.cpp" />
-    <ClCompile Include="src\managers\TextureManager.cpp" />
-    <ClCompile Include="src\scenes\GameOverScene.cpp" />
-    <ClCompile Include="src\scenes\MenuScene.cpp" />
-    <ClCompile Include="src\scenes\PauseScene.cpp" />
-    <ClCompile Include="src\scenes\PlayScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
