--- a/ArkaPong.vcxproj
+++ b/ArkaPong.vcxproj
@@ -87,6 +87,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\ECS\Component\InputComponent.h" />
+    <ClInclude Include="src\ECS\System\InputSystem.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\GameConstants.h" />
     <ClInclude Include="src\Scenes\GameScene.h" />
