--- a/ArkaPong.vcxproj
+++ b/ArkaPong.vcxproj
@@ -87,11 +87,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\ECS\Component\InputComponent.h" />
-    <ClInclude Include="src\ECS\System\InputSystem.h" />
-    <ClInclude Include="src\SpatialHash.h" />
     <ClInclude Include="src\Game.h" />
-    <ClInclude Include="src\GameConstants.h" />
+    <ClInclude Include="src\Utils\SpatialHash.h" />
+    <ClInclude Include="src\Utils\GameConstants.h" />
+    <ClInclude Include="src\Utils\CollisionReaction.h" />
     <ClInclude Include="src\Scenes\GameScene.h" />
     <ClInclude Include="src\Scenes\Scene.h" />
     <ClInclude Include="src\Scenes\SceneManager.h" />
@@ -99,6 +98,7 @@
     <ClInclude Include="src\ECS\Component\AudioComponent.h" />
     <ClInclude Include="src\ECS\Component\CollisionComponent.h" />
     <ClInclude Include="src\ECS\Component\ComponentManager.h" />
+    <ClInclude Include="src\ECS\Component\InputComponent.h" />
     <ClInclude Include="src\ECS\Component\PositionComponent.h" />
     <ClInclude Include="src\ECS\Component\RenderComponent.h" />
     <ClInclude Include="src\ECS\Component\TextComponent.h" />
@@ -107,6 +107,7 @@
     <ClInclude Include="src\ECS\Entity\EntityManager.h" />
     <ClInclude Include="src\ECS\System\AudioSystem.h" />
     <ClInclude Include="src\ECS\System\CollisionSystem.h" />
+    <ClInclude Include="src\ECS\System\InputSystem.h" />
     <ClInclude Include="src\ECS\System\MovementSystem.h" />
     <ClInclude Include="src\ECS\System\RenderSystem.h" />
     <ClInclude Include="src\ECS\System\System.h" />
