--- a/ArkaPong.vcxproj.filters
+++ b/ArkaPong.vcxproj.filters
@@ -18,10 +18,13 @@
     <ClInclude Include="src\Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\GameConstants.h">
+    <ClInclude Include="src\Utils\CollisionReaction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\SpatialHash.h">
+    <ClInclude Include="src\Utils\GameConstants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils\SpatialHash.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Scenes\GameScene.h">
