--- a/ArkaPong.vcxproj
+++ b/ArkaPong.vcxproj
@@ -87,16 +87,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\ECS\Component\Background\ImageBackgroundComponent.h" />
-    <ClInclude Include="src\ECS\Component\Background\ParallaxBackgroundComponent.h" />
-    <ClInclude Include="src\ECS\Component\Background\ParallaxLayer.h" />
-    <ClInclude Include="src\ECS\Component\Background\SolidColorBackgroundComponent.h" />
-    <ClInclude Include="src\ECS\Component\Background\TileBackgroundComponent.h" />
-    <ClInclude Include="src\ECS\Entity\BackgroundEntity.h" />
-    <ClInclude Include="src\ECS\System\Background\ParallaxBackgroundSystem.h" />
-    <ClInclude Include="src\ECS\System\Background\ImageBackgroundSystem.h" />
-    <ClInclude Include="src\ECS\System\Background\SolidColorBackgroundSystem.h" />
-    <ClInclude Include="src\ECS\System\Background\TileBackgroundSystem.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\Scenes\MainMenuScene.h" />
     <ClInclude Include="src\Utils\SpatialHash.h" />
@@ -105,21 +95,31 @@
     <ClInclude Include="src\Scenes\Scene.h" />
     <ClInclude Include="src\Scenes\SceneManager.h" />
     <ClInclude Include="src\ECS\Coordinator.h" />
+    <ClInclude Include="src\ECS\Component\Background\ImageBackgroundComponent.h" />
+    <ClInclude Include="src\ECS\Component\Background\ParallaxBackgroundComponent.h" />
+    <ClInclude Include="src\ECS\Component\Background\ParallaxLayer.h" />
+    <ClInclude Include="src\ECS\Component\Background\SolidColorBackgroundComponent.h" />
+    <ClInclude Include="src\ECS\Component\Background\TileBackgroundComponent.h" />
     <ClInclude Include="src\ECS\Component\AudioComponent.h" />
     <ClInclude Include="src\ECS\Component\CollisionComponent.h" />
     <ClInclude Include="src\ECS\Component\ComponentManager.h" />
     <ClInclude Include="src\ECS\Component\InputComponent.h" />
     <ClInclude Include="src\ECS\Component\PositionComponent.h" />
-    <ClInclude Include="src\ECS\Component\RenderComponent.h" />
+    <ClInclude Include="src\ECS\Component\SpriteComponent.h" />
     <ClInclude Include="src\ECS\Component\TextComponent.h" />
     <ClInclude Include="src\ECS\Component\VelocityComponent.h" />
     <ClInclude Include="src\ECS\Entity\Entity.h" />
     <ClInclude Include="src\ECS\Entity\EntityManager.h" />
+    <ClInclude Include="src\ECS\Entity\BackgroundEntity.h" />
+    <ClInclude Include="src\ECS\System\Background\ParallaxBackgroundSystem.h" />
+    <ClInclude Include="src\ECS\System\Background\ImageBackgroundSystem.h" />
+    <ClInclude Include="src\ECS\System\Background\SolidColorBackgroundSystem.h" />
+    <ClInclude Include="src\ECS\System\Background\TileBackgroundSystem.h" />
     <ClInclude Include="src\ECS\System\AudioSystem.h" />
     <ClInclude Include="src\ECS\System\CollisionSystem.h" />
     <ClInclude Include="src\ECS\System\InputSystem.h" />
     <ClInclude Include="src\ECS\System\MovementSystem.h" />
-    <ClInclude Include="src\ECS\System\RenderSystem.h" />
+    <ClInclude Include="src\ECS\System\SpriteSystem.h" />
     <ClInclude Include="src\ECS\System\System.h" />
     <ClInclude Include="src\ECS\System\SystemManager.h" />
     <ClInclude Include="src\ECS\System\TextSystem.h" />
